WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220644
Fix for LayoutTests/accessibility/canvas-fallback-content.html in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=220644
Summary
Fix for LayoutTests/accessibility/canvas-fallback-content.html in isolated tr...
Andres Gonzalez
Reported
2021-01-14 18:03:43 PST
Fix for LayoutTests/accessibility/canvas-fallback-content.html in isolated tree mode.
Attachments
Patch
(26.81 KB, patch)
2021-01-14 18:29 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(30.23 KB, patch)
2021-01-15 09:18 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(31.08 KB, patch)
2021-01-18 14:08 PST
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2021-01-14 18:29:11 PST
Created
attachment 417675
[details]
Patch
chris fleizach
Comment 2
2021-01-14 18:45:50 PST
Comment on
attachment 417675
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=417675&action=review
> Source/WebCore/ChangeLog:6 > + Reviewed by NOBODY (OOPS!).
can you add a comment what this fix does to resolve the issue?
Andres Gonzalez
Comment 3
2021-01-15 09:18:36 PST
Created
attachment 417708
[details]
Patch
Andres Gonzalez
Comment 4
2021-01-15 09:22:23 PST
(In reply to chris fleizach from
comment #2
)
> Comment on
attachment 417675
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=417675&action=review
> > > Source/WebCore/ChangeLog:6 > > + Reviewed by NOBODY (OOPS!). > > can you add a comment what this fix does to resolve the issue?
Done. Also trying to solve the Win test failure.
Andres Gonzalez
Comment 5
2021-01-18 14:08:33 PST
Created
attachment 417846
[details]
Patch
EWS
Comment 6
2021-01-18 15:55:02 PST
Committed
r271587
: <
https://trac.webkit.org/changeset/271587
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 417846
[details]
.
Radar WebKit Bug Importer
Comment 7
2021-01-18 15:56:14 PST
<
rdar://problem/73331919
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug